fix: rework upload modal alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -74,16 +74,6 @@ input {
   z-index: 40;
 }
 
-.max-w-xl {
-  left: 0;
-}
-
-#headlessui-popover-panel-\:r13\: {
-  left: 0;
-  right: 0;
-  width: 100%;
-}
-
 form.flex>div:nth-child(1) {
   width: 100%;
 }
